<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>43</version>
    </parent>

    <groupId>org.jboss.classfilewriter</groupId>
    <artifactId>jboss-classfilewriter</artifactId>
    <version>1.3.1.Final</version>

    <packaging>jar</packaging>
    <description>A bytecode writer that creates .class files at runtime</description>

    <name>classfilewriter</name>
    <url>https://github.com/jbossas/jboss-classfilewriter</url>

    <developers>
        <developer>
            <name>Stuart Douglas</name>
            <email>sdouglas@redhat.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <jdk.min.version>11</jdk.min.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.9</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Automatic-Module-Name>org.jboss.classfilewriter</Automatic-Module-Name>
                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                        <Bundle-Version>${project.version}</Bundle-Version>
                        <Export-Package>
                            org.jboss.classfilewriter.*;version=${project.version}
                        </Export-Package>
                        <Import-Package>
                            !java.*,
                            *
                        </Import-Package>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <id>osgi-bundle</id>
                        <goals>
                            <goal>bundle</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:git://github.com/jbossas/jboss-classfilewriter.git</connection>
        <developerConnection>scm:git:git@github.com:jbossas/jboss-classfilewriter.git</developerConnection>
        <url>scm:git:git://github.com/jbossas/jboss-classfilewriter.git</url>
    </scm>

</project>
